# QtOIIO

./: .gitignore  CMakeLists.txt  COPYING.md  INSTALL.md  README.md  appveyor.yml
cmake/: FindOpenEXR.cmake  FindOpenImageIO.cmake
src/: CMakeLists.txt  QtOIIOHandler.cpp  QtOIIOPlugin.json  jetColorMap.hpp
src/depthMapEntity/: CMakeLists.txt  DepthMapEntity.cpp  DepthMapEntity.hpp  mv_matrix3x3.hpp  mv_point3d.hpp  plugin.hpp  qmldir
src/imageIOHandler/: CMakeLists.txt  QtOIIOHandler.cpp  QtOIIOHandler.hpp  QtOIIOPlugin.cpp  QtOIIOPlugin.hpp  QtOIIOPlugin.json
